--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,28 @@
     font-family: "Inter", sans-serif;
 }
 
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+.button{
+    width: 10vw;
+}
+
+.button2{
+    background: none;
+    border: none;
+}
+
+.input{
+    width: 40vw;
+    outline: none;
+}
+
 /* .produtos{
     background-color: rgb(243, 173, 208);
 } */
